Fix alignement and file to be edited

--- a/src/main/_docs/assets/css/screen.scss
+++ b/src/main/_docs/assets/css/screen.scss
@@ -7,7 +7,3 @@
 @import "pygments";
 @import "font-awesome";
 @import "style";
-
-code {
-  line-height: 17px;
-}
